--- a/index.html
+++ b/index.html
@@ -5,39 +5,40 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css"></link>
+    <script defer src="script.js"></script>
 </head>
 <body>
     <div id="calculatorDiv">
-        <div id="display">
-
+        <div id="header">
+            <div id="display"></div>
         </div>
         <div id="buttonsDiv">
             <div class="row">
                 <button id="C" class="grey">C</button>
-                <button id="plusAndMinus" class="grey">±</button>
+                <button id="plusToMinus" class="grey">±</button>
                 <button id="percent" class="grey">%</button>
                 <button id="divide" class="orange">÷</button>
             </div>
             <div class="row">
-                <button id="btn7">7</button>
-                <button id="btn8">8</button>
-                <button id="btn9">9</button>
+                <button id="btn7" class="number">7</button>
+                <button id="btn8" class="number">8</button>
+                <button id="btn9" class="number">9</button>
                 <button id="multiplication" class="orange">×</button>
             </div>
             <div class="row">
-                <button id="btn4">4</button>
-                <button id="btn5">5</button>
-                <button id="btn6">6</button>
+                <button id="btn4" class="number">4</button>
+                <button id="btn5" class="number">5</button>
+                <button id="btn6" class="number">6</button>
                 <button id="subtraction" class="orange">-</button>
             </div>
             <div class="row">
-                <button id="btn1">1</button>
-                <button id="btn2">2</button>
-                <button id="btn3">3</button>
+                <button id="btn1" class="number">1</button>
+                <button id="btn2" class="number">2</button>
+                <button id="btn3" class="number">3</button>
                 <button id="addition" class="orange">+</button>
             </div>
             <div class="row">
-                <button id="btn0">0</button>
+                <button id="btn0" class="number">0</button>
                 <button id="dot">.</button>
                 <button id="equal" class="orange">=</button>
             </div>
