--- a/index.html
+++ b/index.html
@@ -17,25 +17,25 @@
                 <button id="C" class="grey">C</button>
                 <button id="plusToMinus" class="grey">±</button>
                 <button id="percent" class="grey">%</button>
-                <button id="divide" class="orange">÷</button>
+                <button id="divide" class="orange operation">÷</button>
             </div>
             <div class="row">
                 <button id="btn7" class="number">7</button>
                 <button id="btn8" class="number">8</button>
                 <button id="btn9" class="number">9</button>
-                <button id="multiplication" class="orange">×</button>
+                <button id="multiplication" class="orange operation">×</button>
             </div>
             <div class="row">
                 <button id="btn4" class="number">4</button>
                 <button id="btn5" class="number">5</button>
                 <button id="btn6" class="number">6</button>
-                <button id="subtraction" class="orange">-</button>
+                <button id="subtraction" class="orange operation">-</button>
             </div>
             <div class="row">
                 <button id="btn1" class="number">1</button>
                 <button id="btn2" class="number">2</button>
                 <button id="btn3" class="number">3</button>
-                <button id="addition" class="orange">+</button>
+                <button id="addition" class="orange operation">+</button>
             </div>
             <div class="row">
                 <button id="btn0" class="number">0</button>
